Add handler method in HotelService for GET /histogram/{param}